# youki

./: .dockerignore  .gitmodules  .tagpr  .typos.toml  404.html  CHANGELOG.md  Cargo.toml  Cross.toml  MigrationGuide.md  README.md  SECURITY.md  Vagrantfile  Vagrantfile.containerd2youki  Vagrantfile.podmane2e  Vagrantfile.root  flake.nix  index.html  justfile  log.json  print.html  rust-toolchain.toml  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-152f5dcc.js  searchindex-172a64dd.js  searchindex-327fc7e9.js  searchindex-36b04f5b.js  searchindex-4415311c.js  searchindex-5617cbfc.js  searchindex-77cda521.js  searchindex-7a87bcc0.js  searchindex-8bab9d0b.js  searchindex-8cff0868.js  searchindex-972db254.js  searchindex-9d24c0f4.js  searchindex-a8a046aa.js  searchindex-bbd779ce.js  searchindex-d24fbc1d.js  searchindex-ea13659e.js  searchindex.js  (+10 more)
community/: chat.html  (+5 more)
crates/libcgroups/: Cargo.toml
crates/libcgroups/examples/: bpf.rs  systemd_io.rs
crates/libcgroups/src/: common.rs  test_manager.rs
crates/libcgroups/src/stub/systemd/: manager.rs
crates/libcgroups/src/stub/v1/: manager.rs
crates/libcgroups/src/stub/v2/: manager.rs
crates/libcgroups/src/systemd/: cpu.rs  io.rs  manager.rs  memory.rs  mod.rs  pids.rs  unified.rs
crates/libcgroups/src/systemd/dbus_native/: client.rs  dbus.rs  message.rs  proxy.rs  serialize.rs  utils.rs
crates/libcgroups/src/v1/: blkio.rs  controller.rs  cpu.rs  cpuacct.rs  cpuset.rs  devices.rs  freezer.rs  hugetlb.rs  manager.rs  memory.rs  pids.rs  util.rs
crates/libcgroups/src/v2/: cpu.rs  freezer.rs  hugetlb.rs  io.rs  manager.rs  memory.rs  pids.rs  util.rs
crates/libcgroups/src/v2/devices/: bpf.rs  controller.rs  program.rs
crates/libcontainer/: Cargo.toml
crates/libcontainer/src/: apparmor.rs  capabilities.rs  config.rs  error.rs  hooks.rs  lib.rs  namespaces.rs  network.rs  network_device.rs  signal.rs  test_utils.rs  tty.rs  user_ns.rs  utils.rs  validator.rs
crates/libcontainer/src/container/: builder.rs  builder_impl.rs  container.rs  container_checkpoint.rs  container_criu.rs  container_delete.rs  container_events.rs  container_kill.rs  container_pause.rs  container_restore.rs  container_resume.rs  container_start.rs  init_builder.rs  mod.rs  mount_validation.rs  state.rs  tenant_builder.rs
crates/libcontainer/src/network/: address.rs  cidr.rs  client.rs  fake.rs  link.rs  mod.rs  netlink.rs  network_device.rs  serialize.rs  traits.rs  wrapper.rs
crates/libcontainer/src/process/: args.rs  channel.rs  container_init_process.rs  container_intermediate_process.rs  container_main_process.rs  cpu_affinity.rs  fork.rs  intel_rdt.rs  memory_policy.rs  message.rs  mod.rs  seccomp_listener.rs
crates/libcontainer/src/process/init/: context.rs  error.rs  process.rs
crates/libcontainer/src/rootfs/: device.rs  mod.rs  mount.rs  rootfs.rs  symlink.rs  utils.rs
crates/libcontainer/src/seccomp/: mod.rs
crates/libcontainer/src/syscall/: linux.rs  mod.rs  syscall.rs  test.rs
crates/libcontainer/src/workload/: default.rs  mod.rs
crates/libcontainer/tests/: as_sibling.rs
crates/liboci-cli/: Cargo.toml
crates/liboci-cli/src/: checkpoint.rs  create.rs  delete.rs  events.rs  exec.rs  features.rs  kill.rs  lib.rs  list.rs  pause.rs  ps.rs  restore.rs  resume.rs  run.rs  spec.rs  start.rs  state.rs  update.rs
crates/youki/: Cargo.toml  build.rs
crates/youki/src/: main.rs  observability.rs  rootpath.rs
crates/youki/src/commands/: checkpoint.rs  completion.rs  exec.rs  features.rs  foreground.rs  info.rs  kill.rs  mod.rs  ps.rs  restore.rs  run.rs  spec_json.rs  state.rs  update.rs
crates/youki/src/workload/: executor.rs  libkrun.rs  mod.rs  wasmedge.rs  wasmer.rs  wasmtime.rs
tests/contest/contest/: Cargo.toml  README.md
tests/contest/contest/src/: main.rs
tests/contest/contest/src/tests/: mod.rs
tests/contest/contest/src/tests/cgroups/: blkio.rs  devices.rs  memory.rs  network.rs  pids.rs  relative_network.rs
tests/contest/contest/src/tests/checkpoint_restore/: mod.rs
tests/contest/contest/src/tests/create_runtime/: mod.rs
tests/contest/contest/src/tests/create_runtime_fail/: mod.rs
tests/contest/contest/src/tests/delete/: delete_test.rs
tests/contest/contest/src/tests/devices/: devices_test.rs
tests/contest/contest/src/tests/domainname/: mod.rs
tests/contest/contest/src/tests/example/: hello_world.rs
tests/contest/contest/src/tests/exec/: cap_test.rs  cgroup_test.rs  ignore_paused_test.rs  mod.rs  mount_test.rs  preserve_fds_test.rs
tests/contest/contest/src/tests/exec_cpu_affinity/: exec_cpu_affinity_test.rs  mod.rs
tests/contest/contest/src/tests/exec_env/: exec_env_test.rs  mod.rs
tests/contest/contest/src/tests/exec_env_inheritance/: exec_env_inheritance_test.rs  mod.rs
tests/contest/contest/src/tests/fd_control/: mod.rs
tests/contest/contest/src/tests/hooks/: invoke.rs  mod.rs  start_container_env.rs
tests/contest/contest/src/tests/idmap/: idmap_test.rs  mod.rs
tests/contest/contest/src/tests/intel_rdt/: intel_rdt_test.rs
tests/contest/contest/src/tests/io_priority/: io_priority_test.rs
tests/contest/contest/src/tests/kill/: kill_test.rs
tests/contest/contest/src/tests/kill_no_effect/: kill_no_effect_test.rs  mod.rs
tests/contest/contest/src/tests/killsig/: mod.rs
tests/contest/contest/src/tests/lifecycle/: checkpoint.rs  container_lifecycle.rs  create.rs  mod.rs  state.rs  util.rs
tests/contest/contest/src/tests/linux_masked_paths/: masked_paths.rs
tests/contest/contest/src/tests/linux_ns_itype/: ns_itype_test.rs
tests/contest/contest/src/tests/linux_ns_path/: mod.rs  ns_path_test.rs
tests/contest/contest/src/tests/memory_policy/: memory_policy_test.rs  mod.rs
tests/contest/contest/src/tests/misc_props/: misc_props_test.rs  mod.rs
tests/contest/contest/src/tests/mounts_recursive/: mod.rs
tests/contest/contest/src/tests/net_devices/: mod.rs  net_devices_test.rs
tests/contest/contest/src/utils/: mod.rs  net.rs  support.rs  test_utils.rs
tests/contest/runtimetest/: Cargo.toml
tests/contest/runtimetest/src/: main.rs  tests.rs  utils.rs
(+185 files in other folders)
