[workspace]
resolver = "2"
members = ["crates/*", "tests/contest/*", "tools/*"]
exclude = ["experiment/seccomp", "experiment/selinux"]

[profile.release]
lto = true

[workspace.dependencies]
# Internal crates
libcgroups = { path = "crates/libcgroups", version = "0.6.0", default-features = false }
libcontainer = { path = "crates/libcontainer", version = "0.6.0", default-features = false }
liboci-cli = { path = "crates/liboci-cli", version = "0.6.0" }

# External dependencies
anyhow = "1.0"
caps = "0.5.6"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.13", default-features = false, features = ["std", "suggestions", "derive", "cargo", "help", "usage", "error-context"] }
libc = "0.2.180"
nc = "0.9.7"
netlink-packet-core = "0.8.1"
netlink-packet-route = "0.26.0"
netlink-sys = "0.8.8"
nix = { version = "0.29.0" }
num_cpus = "1.17"
oci-spec = { version = "~0.9.0", features = ["runtime"] }
pathrs = "0.2.4"
procfs = "0.18.0"
quickcheck = "1"
rand = "0.10.0"
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
scopeguard = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.4.0"
tempfile = "3"
thiserror = "2.0"
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
