[package]
name = "libcgroups"
version = "0.5.8" # MARK: Version
description = "Library for cgroup"
license = "Apache-2.0"
repository = "https://github.com/youki-dev/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "README.md"
authors = ["youki team"]
edition = "2024"
rust-version = "1.85.0"
autoexamples = true
keywords = ["youki", "container", "cgroups"]

[features]
default = ["v1", "v2", "systemd"]
v1 = []
v2 = []
systemd = ["v2", "nix/socket", "nix/uio"]
cgroupsv2_devices = ["rbpf", "libbpf-sys", "errno", "libc", "nix/dir"]

[dependencies]
nix = { version = "0.29.0", features = ["signal", "user", "fs"] }
procfs = "0.17.0"
pathrs = "0.2.3"
oci-spec = { version = "~0.8.4", features = ["runtime"] }
fixedbitset = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
rbpf = { version = "0.3.0", optional = true }
libbpf-sys = { version = "1.6.3", optional = true }
errno = { version = "0.3.14", optional = true }
libc = { version = "0.2.180", optional = true }
thiserror = "2.0.18"
tracing = { version = "0.1.44", features = ["attributes"] }

[dev-dependencies]
anyhow = "1.0"
oci-spec = { version = "~0.8.4", features = ["proptests", "runtime"] }
quickcheck = "1"
mockall = { version = "0.14.0", features = [] }
clap = "4.5.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
serial_test = "3.3.1"
tempfile = "3"
