[package]
name = "libcgroups"
version = "0.6.0" # MARK: Version
description = "Library for cgroup"
license = "Apache-2.0"
repository = "https://github.com/youki-dev/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "README.md"
authors = ["youki team"]
edition = "2024"
rust-version = "1.85.0"
autoexamples = true
keywords = ["youki", "container", "cgroups"]

[features]
default = ["v1", "v2", "systemd"]
v1 = []
v2 = []
systemd = ["v2", "nix/socket", "nix/uio"]
cgroupsv2_devices = ["rbpf", "libbpf-sys", "errno", "libc", "nix/dir"]

[dependencies]
nix = { workspace = true, features = ["signal", "user", "fs"] }
procfs = { workspace = true }
pathrs = { workspace = true }
oci-spec = { workspace = true }
fixedbitset = "0.5.7"
serde = { workspace = true }
rbpf = { version = "0.4.1", optional = true }
libbpf-sys = { version = "1.6.4", optional = true }
errno = { version = "0.3.14", optional = true }
libc = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
oci-spec = { workspace = true, features = ["proptests"] }
quickcheck = { workspace = true }
mockall = { version = "0.14.0", features = [] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = "0.11"
serial_test = { workspace = true }
tempfile = { workspace = true }
