[package]
name = "libcgroups"
version = "0.6.0" # MARK: Version
description = "Library for cgroup"
license = "Apache-2.0"
repository = "https://github.com/youki-dev/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "README.md"
authors = ["youki team"]
edition = "2024"
rust-version = "1.85.0"
autoexamples = true
keywords = ["youki", "container", "cgroups"]

[features]
default = ["v1", "v2", "systemd"]
v1 = []
v2 = []
systemd = ["v2", "nix/socket", "nix/uio"]
cgroupsv2_devices = ["rbpf", "libbpf-sys", "errno", "libc", "nix/dir"]

[dependencies]
nix = { workspace = true, features = ["signal", "user", "fs"] }
procfs = { workspace = true }
pathrs = { workspace = true }
oci-spec = { version = "~0.9.0", features = ["runtime"] }
fixedbitset = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rbpf = { workspace = true, optional = true }
libbpf-sys = { workspace = true, optional = true }
errno = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[dev-dependencies]
anyhow = { workspace = true }
oci-spec = { version = "~0.9.0", features = ["proptests", "runtime"] }
quickcheck = { workspace = true }
mockall = { workspace = true, features = [] }
clap = { workspace = true, features = ["std", "color", "help", "usage", "error-context", "suggestions"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
env_logger = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
