[package]
name = "libcontainer"
version = "0.5.6" # MARK: Version
description = "Library for container control"
license = "Apache-2.0"
repository = "https://github.com/youki-dev/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "README.md"
authors = ["youki team"]
edition = "2024"
rust-version = "1.85.0"
keywords = ["youki", "container", "cgroups"]

[features]
default = ["systemd", "v2", "v1", "libseccomp"]
libseccomp = ["dep:libseccomp"]
systemd = ["libcgroups/systemd", "v2"]
v2 = ["libcgroups/v2"]
v1 = ["libcgroups/v1"]
cgroupsv2_devices = ["libcgroups/cgroupsv2_devices"]

[dependencies]
caps = "0.5.5"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
fastrand = "^2.3.0"
libc = "0.2.177"
nix = { version = "0.29.0", features = [
    "socket",
    "sched",
    "mount",
    "mman",
    "resource",
    "dir",
    "term",
    "hostname",
    "personality",
] }
oci-spec = { version = "0.8.3", features = ["runtime"] }
once_cell = "1.21.3"
procfs = "0.17.0"
prctl = "1.0.0"
protobuf = "= 3.2.0" # https://github.com/checkpoint-restore/rust-criu/issues/19
libcgroups = { path = "../libcgroups", default-features = false, version = "0.5.6" } # MARK: Version
libseccomp = { version = "0.3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-criu = "0.4.0"
regex = { version = "1.12.2", default-features = false, features = ["std", "unicode-perl"] }
thiserror = "2.0.17"
tracing = { version = "0.1.41", features = ["attributes"] }
safe-path = "0.1.0"
nc = "0.9.6"

[dev-dependencies]
oci-spec = { version = "~0.8.3", features = ["proptests", "runtime"] }
quickcheck = "1"
serial_test = "3.1.1"
tempfile = "3"
anyhow = "1.0"
rand = "0.9.2"
scopeguard = "1"

[package.metadata.cargo-machete]
ignored = ["protobuf"]
