[package]
name = "liboci-cli"
version = "0.6.1" # MARK: Version
description = "Parse command line arguments for OCI container runtimes"
license = "Apache-2.0"
repository = "https://github.com/youki-dev/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "README.md"
authors = ["youki team"]
edition = "2024"
keywords = ["youki", "container", "oci"]

[dependencies]
clap = { workspace = true, features = ["std", "suggestions", "derive", "cargo", "help", "usage", "error-context"] }
