[package]
name = "youki"
version = "0.5.8" # MARK: Version
description = "A container runtime written in Rust"
license = "Apache-2.0"
repository = "https://github.com/youki-dev/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "../../README.md"
authors = ["youki team"]
edition = "2024"
build = "build.rs"
keywords = ["youki", "container"]

[features]
systemd = ["libcgroups/systemd", "libcontainer/systemd", "v2"]
v2 = ["libcgroups/v2", "libcontainer/v2"]
v1 = ["libcgroups/v1", "libcontainer/v1"]
cgroupsv2_devices = ["libcgroups/cgroupsv2_devices", "libcontainer/cgroupsv2_devices"]
seccomp = ["libcontainer/libseccomp"]

wasm-wasmer = ["wasmer", "wasmer-wasix"]
wasm-wasmedge = ["wasmedge-sdk/standalone", "wasmedge-sdk/static"]
wasm-wasmtime = ["wasmtime", "wasi-common"]

[dependencies.clap]
version = "4.5.13"
default-features = false
features = ["std", "suggestions", "derive", "cargo", "help", "usage", "error-context"]

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
libcgroups = { path = "../libcgroups", default-features = false, version = "0.5.8" } # MARK: Version
libcontainer = { path = "../libcontainer", default-features = false, version = "0.5.8" } # MARK: Version
liboci-cli = { path = "../liboci-cli", version = "0.5.8" } # MARK: Version
nix = "0.29.0"
pentacle = "1.1.0"
procfs = "0.17.0"
serde_json = "1.0"
tabwriter = "1"
clap_complete = "4.5.13"
caps = "0.5.6"
wasmer = { version = "4.0.0", optional = true }
wasmer-wasix = { version = "0.9.0", optional = true }
wasmedge-sdk = { version = "0.14.0", optional = true }
wasmtime = { version = "40.0.3", optional = true }
wasi-common = { version = "40.0.2", optional = true }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
tracing-journald = "0.3.2"
oci-spec = { version = "0.8.4", features = ["runtime"] }

[dev-dependencies]
serial_test = "3.3.1"
tempfile = "3"
scopeguard = "1.2.0"

[build-dependencies]
anyhow = "1.0.101"
vergen-gitcl = { version = "9.1.0", features = ["build", "rustc"] }
pkg-config = "0.3.32"
