[package]
name = "youki"
version = "0.6.0" # MARK: Version
description = "A container runtime written in Rust"
license = "Apache-2.0"
repository = "https://github.com/youki-dev/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "../../README.md"
authors = ["youki team"]
edition = "2024"
build = "build.rs"
keywords = ["youki", "container"]

[features]
systemd = ["libcgroups/systemd", "libcontainer/systemd", "v2"]
v2 = ["libcgroups/v2", "libcontainer/v2"]
v1 = ["libcgroups/v1", "libcontainer/v1"]
cgroupsv2_devices = ["libcgroups/cgroupsv2_devices", "libcontainer/cgroupsv2_devices"]
seccomp = ["libcontainer/libseccomp"]

wasm-wasmer = ["wasmer", "wasmer-wasix"]
wasm-wasmedge = ["wasmedge-sdk/standalone", "wasmedge-sdk/static"]
wasm-wasmtime = ["wasmtime", "wasi-common"]

[dependencies]
anyhow = { workspace = true }
caps = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5.13"
libcgroups = { workspace = true }
libcontainer = { workspace = true }
liboci-cli = { workspace = true }
nix = { workspace = true }
oci-spec = { workspace = true }
pentacle = "1.1.0"
procfs = { workspace = true }
serde_json = { workspace = true }
tabwriter = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = "0.3.2"
wasmer = { version = "7.0.1", optional = true, features = ["sys","singlepass"] }
wasmer-wasix = { version = "0.700.1", optional = true }
wasmedge-sdk = { version = "0.14.0", optional = true }
wasmtime = { version = "42.0.0", optional = true }
wasi-common = { version = "42.0.1", optional = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }
scopeguard = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen-gitcl = { version = "9.1.0", features = ["build", "rustc"] }
pkg-config = "0.3.32"
