[package]
name = "youki"
version = "0.6.1" # MARK: Version
description = "A container runtime written in Rust"
license = "Apache-2.0"
repository = "https://github.com/youki-dev/youki"
homepage = "https://youki-dev.github.io/youki/"
readme = "../../README.md"
authors = ["youki team"]
edition = "2024"
build = "build.rs"
keywords = ["youki", "container"]

[features]
systemd = ["libcgroups/systemd", "libcontainer/systemd", "v2"]
v2 = ["libcgroups/v2", "libcontainer/v2"]
v1 = ["libcgroups/v1", "libcontainer/v1"]
cgroupsv2_devices = ["libcgroups/cgroupsv2_devices", "libcontainer/cgroupsv2_devices"]
seccomp = ["libcontainer/libseccomp"]

wasm-wasmer = ["wasmer", "wasmer-wasix"]
wasm-wasmedge = ["wasmedge-sdk/standalone", "wasmedge-sdk/static"]
wasm-wasmtime = ["wasmtime", "wasi-common"]

[dependencies]
clap = { workspace = true, features = ["std", "suggestions", "derive", "cargo", "help", "usage", "error-context"] }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
libcgroups = { path = "../libcgroups", default-features = false, version = "0.6.1" } # MARK: Version
libcontainer = { path = "../libcontainer", default-features = false, version = "0.6.1" } # MARK: Version
liboci-cli = { workspace = true }
nix = { workspace = true }
pentacle = { workspace = true }
procfs = { workspace = true }
serde_json = { workspace = true }
tabwriter = { workspace = true }
clap_complete = { workspace = true }
caps = { workspace = true }
wasmer = { workspace = true, features = ["sys", "singlepass"], optional = true }
wasmer-wasix = { workspace = true, optional = true }
wasmedge-sdk = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
wasi-common = { workspace = true, optional = true }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-journald = { workspace = true }
oci-spec = { version = "0.9.0", features = ["runtime"] }
rust-criu = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }
scopeguard = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen-gitcl = { workspace = true, features = ["build", "rustc"] }
pkg-config = { workspace = true }
