[package]
name = "contest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
flate2 = "1.1"
libcgroups = { path = "../../../crates/libcgroups" }
libcontainer = { path = "../../../crates/libcontainer" }
nix = "0.29.0"
num_cpus = "1.17"
oci-spec = { version = "0.8.4", features = ["runtime"] }
pnet_datalink = "0.35.0"
procfs = "0.17.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
test_framework = { path = "../test_framework" }
uuid = "1.16"
which = "8.0.0"
tempfile = "3"
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
regex = "1"

[dependencies.clap]
version = "4.5.13"
default-features = false
features = [
    "std",
    "suggestions",
    "derive",
    "cargo",
    "help",
    "usage",
    "error-context",
]
