[package]
name = "contest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
flate2 = "1.1"
libcgroups = { workspace = true, features = ["v1", "v2", "systemd"] }
libcontainer = { workspace = true, features = ["v1", "v2", "systemd", "libseccomp"] }
nix = { workspace = true }
num_cpus = { workspace = true }
oci-spec = { workspace = true }
pnet_datalink = "0.35.0"
procfs = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = "0.4"
tempfile = { workspace = true }
test_framework = { path = "../test_framework" }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = "1.22"
which = "8.0.2"
