[package]
name = "contest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
libcgroups = { path = "../../../crates/libcgroups" }
libcontainer = { path = "../../../crates/libcontainer" }
nix = { workspace = true }
num_cpus = { workspace = true }
oci-spec = { version = "0.9.0", features = ["runtime"] }
pnet_datalink = { workspace = true }
procfs = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = { workspace = true }
test_framework = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
regex = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["std", "suggestions", "derive", "cargo", "help", "usage", "error-context"] }
