[package]
name = "runtimetest"
version = "0.0.1"
edition = "2024"

[dependencies]
oci-spec = { version = "0.9.0", features = ["runtime"] }
nix = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true } # TODO (YJDoc2) upgrade to latest
nc = { workspace = true }
tempfile = { workspace = true }
netlink-packet-route = { workspace = true }
netlink-packet-core = { workspace = true }
netlink-sys = { workspace = true }
procfs = { workspace = true }
