[package]
name = "runtimetest"
version = "0.0.1"
edition = "2024"

[dependencies]
oci-spec = { git = "https://github.com/youki-dev/oci-spec-rs", rev = "d21e23b70876e47b8dacb10844c9a39ff77054cb" }
nix = "0.29.0"
anyhow = "1.0"
libc = "0.2.180" # TODO (YJDoc2) upgrade to latest
nc = "0.9.7"
tempfile = "3"
netlink-packet-route = "0.26.0"
netlink-packet-core = "0.8.1"
netlink-sys = "0.8.5"
